--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,7 @@
 <div class="publications">
-  <h2>Selected publications</h2>
-  {% bibliography -f papers -q @*[selected=true]* %}
+  <h2>Publications</h2>
+  <h4>Preprint</h4>
+  {% bibliography -f papers -q @*[preprint=true]* %}
+  <h4>Conference</h4>
+  {% bibliography -f papers -q @*[conference=true]* %}
 </div>
