add google meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     {% if page.redirect %}<meta http-equiv="refresh" content="3; url={{ site.baseurl | prepend: site.url }}/" />{% endif %}
     {% include head.html %}
     {% include scripts/mathjax.html %}
+    <meta name="google-site-verification" content="gQHyRCeiNn_Ih-WkwTt2qrb74bkQQn7EMFEk-b8c5k0" />
   </head>
 
   <body class="{% if site.navbar_fixed %}fixed-top-nav{% endif %} {% unless site.footer_fixed %}sticky-bottom-footer{% endunless %}">
