--- a/_layouts/distill.html
+++ b/_layouts/distill.html
@@ -11,6 +11,7 @@
       {{ page._styles }}
     </style>
     {% endif %}
+    <meta name="google-site-verification" content="gQHyRCeiNn_Ih-WkwTt2qrb74bkQQn7EMFEk-b8c5k0" />
   </head>
 
   <d-front-matter>
