--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -1,7 +1,7 @@
 <div class="publications">
   <h4> 🤖 RL for Robotics </h4>
   {% bibliography --group_by none --query @*[selected=true, topic=1]* %}
-  <h4> 📘 Curriculum Learning for RL </h4>
+  <h4> 📘 Large-Scale RL </h4>
   {% bibliography --group_by none --query @*[selected=true, topic=2]* %}
   <h4> 💭 LLMs Reasoning </h4>
   {% bibliography --group_by none --query @*[selected=true, topic=3]* %}
